Refactor para Spring, JPA, etc